Update swagger base URL
